YSP-354: Release Bug: Edit reusable Block message text color contrast (#205)
* fix(YSP-354): change foreground on reusable block notification

A bug was found where when editing a reusable block, the message
displayed for those using light mode was a mustard background with black
text, making it hard to read.  This updated the color of the text to be
white, allowing better contrast and readability of the notification
message.

--- a/css/admin-theme.css
+++ b/css/admin-theme.css
@@ -162,3 +162,9 @@
 .js.gin--dark-mode .paragraphs-description .summary-content {
   color: var(--gin-color-text) !important;
 }
+
+/* In light mode, gin is displaying a mustard background with a black 
+foreground. This causes contrast issues.  */
+html:not(.gin--dark-mode) #drupal-off-canvas:not(.drupal-off-canvas-reset).ui-dialog-content div:not([data-drupal-ck-style-fence] *), #drupal-off-canvas-wrapper .ui-dialog-content div:not([data-drupal-ck-style-fence] *) {
+  color: var(--color-basic-white);
+}
